Fixed small flex-wrapping bugs

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -21,7 +21,8 @@ body, html{
 #counter{
     display: flex;
     justify-content: space-between;
-    transform: rotate(2deg)
+    transform: rotate(0deg);
+    margin-top: 15px;
 }
 
 #counter h1{
@@ -50,10 +51,14 @@ background-attachment: fixed;
 
 }
 
+.section-titles{
+    font-size: 24px;
+}
+
 .pimg1{
     background-image:url("https://scontent-lht6-1.cdninstagram.com/vp/804ca50a0e33bfdf3bfcdcf2ca183f00/5C20CD3D/t51.2885-15/e35/32006588_215993399179957_78361910243753984_n.jpg?se=7&ig_cache_key=MTc4NDI1NzMyMzE2NDY0MjU4MQ%3D%3D.2");
     min-height: 100%;
-    height:700px;
+    height:550px;
 }
 
 .pimg2{
@@ -66,6 +71,82 @@ background-attachment: fixed;
     background-image:url("https://scontent-lht6-1.cdninstagram.com/vp/c8537e88e2efd370ef7d669781e085f2/5C32C98B/t51.2885-15/e35/38154084_656624068035280_1682505184250429440_n.jpg?se=7&ig_cache_key=MTg0MzM1NDkwMDc1NzI0MzQyNg%3D%3D.2");
     min-height: 100%;
     height:400px;
+}
+
+/* Cards of Teammates */
+.The-Team-Cards{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap:wrap;
+}
+
+.vertical.flip-container {
+	position: relative;
+}
+
+	.vertical .back {
+		transform: rotateX(180deg);
+	}
+
+	.vertical.flip-container .flipper {
+		transform-origin: 100% 213.5px; /* half of height */
+	}
+
+	.vertical.flip-container:hover .flipper {
+		transform: rotateX(-180deg);
+    }
+    
+/* entire container, keeps perspective */
+.flip-container {
+	perspective: 1000px;
+}
+	/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+
+.flip-container, .front, .back {
+	width: 300px;
+	height: 450px;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+	position: absolute;
+	top: 0;
+    left: 0;
+    border: solid 1px
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+    transform: rotateY(0deg);
+}
+
+.front img{
+    height: 300px;
+    width:100%;
+    border: solid 1px
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
+}
+
+.fa-envelope{
+    font-size: 50px;
 }
 
 .section{
